--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "투자 포트폴리오 대시보드",
+  "name": "투자 포트폴리오 대시보드",
   "icons": [
     {
       "src": "favicon.ico",
