--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eject": "react-scripts eject",
     "format": "prettier --check ./src",
     "format:fix": "prettier --write ./src",
-    "json-server": "json-server --watch ./src/@model/db.json"
+    "json-server": "json-server --watch ./src/@model/db.json --port 3002"
   },
   "eslintConfig": {
     "extends": [
